--- a/img-index-css/css/main.css
+++ b/img-index-css/css/main.css
@@ -16,6 +16,7 @@ height: 800px;
 
 #work {
 	height: 1450px;
+	
 }
 
 #about {
@@ -24,8 +25,9 @@ height: 800px;
 }
 
 #contact {
-	height: 400px;
+	height: 500px;
 	background-color: #095156;
+	
 }
 
 /****** GRID ******/
@@ -77,7 +79,7 @@ header h2  {
 /****** WORK ******/
 
 #work {
-    background-color:  #e6ffe6;
+    background-color:   #e6fff3;
     text-align: left;
 }
 
@@ -128,7 +130,7 @@ header h2  {
 
 #about h2 {
 	text-align: center;
-	padding: 35px 0px;
+	padding-top: 70px;
 	font-family: roboto slab;
 	font-size: 36px;
 	color: #ffffff;
@@ -142,7 +144,8 @@ header h2  {
 #about p {
 	font-family: roboto regular;
 	font-size: 24px;
-	padding: 0px 0px 0px 100px;
+	padding-top:80px;
+	padding-left:40px;
 	color: #ffffff;
 }
 	
@@ -158,8 +161,8 @@ header h2  {
 
 
 #contact .third-width {
-	padding-left: 250px;
-	padding-top: 85px;
+	padding-left: 225px;
+	padding-top: 160px;
 	text-align:center;
 	
 }
@@ -168,8 +171,22 @@ header h2  {
     font-size: 36px;
 	font-family:roboto slab;
     color: #ffffff;
+	font-weight:normal;
+    
 }
 
+.GreenText
+{
+	color:#bdbf09;
+	font-weight:normal;
+	
+}
+ 
+ .LetConnect
+ {
+ 
+ 
+ }
  
 #contact ul{
 	list-style: none;
